Fixed footer alignment.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,4 +1,4 @@
-* {
+html {
 	background-color: black;
 	text-align: center;
 }
